# prog

./: dyn_example  la112.c  la12.c  la14.c  la15.c  la18.cpp  la19.cpp  lab16.c  static_example
LAB13true/: Bin1.c  Bin2.c  CMakeLists.txt  Fill.c  Fill_r.c  Hell.c  Shake.c  Simple.c  Viviod.c  head.h  la13.c  puzir.c
